# pop-phl

./: .appveyor.yml  .dockerignore  .fuzzbuzz.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Dockerfile  INSTALL.md  Makefile.am  README.md  SECURITY.md  alpine-debug.Dockerfile  alpine.Dockerfile  autogen.sh  configure.ac  debug.Dockerfile  dev.Dockerfile  docker-compose.yml  docker-entrypoint.sh  fork.sh  libplacehconsensus.pc.in  phldev.Dockerfile  prerelease.Dockerfile  setup.iss  sonar-project.properties  ubuntu-dev.Dockerfile  ubuntu.Dockerfile
doc/man/: Makefile.am  bitcoin-cli.1  bitcoin-qt.1  bitcoin-tx.1  bitcoin-wallet.1  bitcoind.1  placeh-cli.1  placeh-qt.1  placeh-wallet.1  placehd.1
src/: Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.h  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  bloom.cpp  bloom.h  bootstraps.cpp  bootstraps.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  (+124 more)
src/_vbk/: init.hpp  merkle.hpp  pop_service_impl.hpp  rpc_register.cpp  util.hpp  vbk.hpp
src/algo/: hash_algos.h
src/bench/: .gitignore  Examples.cpp  addrman.cpp  base58.cpp  bech32.cpp  bench.cpp  bench.h  bench_placeh.cpp  block_assemble.cpp  ccoins_caching.cpp  chacha20.cpp  chacha_poly_aead.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  data.cpp  data.h  duplicate_inputs.cpp  examples.cpp  gcs_filter.cpp  lockedpool.cpp  mempool_eviction.cpp  mempool_stress.cpp  merkle_root.cpp  poly1305.cpp  prevector.cpp  rollingbloom.cpp  rpc_blockchain.cpp  rpc_mempool.cpp  util_time.cpp  verify_script.cpp  wallet_balance.cpp
src/compat/: assumptions.h  byteswap.h  cpuid.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibc_sanity_fdelt.cpp  glibcxx_sanity.cpp  sanity.h  stdin.cpp  stdin.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_check.cpp  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  chacha_poly_aead.cpp  chacha_poly_aead.h  common.h  hkdf_sha256_32.cpp  hkdf_sha256_32.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  poly1305.cpp  poly1305.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_avx2.cpp  sha256_shani.cpp  sha256_sse4.cpp  sha256_sse41.cpp  sha512.cpp  sha512.h  siphash.cpp  siphash.h
src/index/: base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h  txindex.cpp  txindex.h
src/interfaces/: README.md  chain.cpp  chain.h  handler.cpp  handler.h  node.cpp  node.h  wallet.cpp  wallet.h
src/logging/: timer.h
src/node/: README.md  coin.cpp  coin.h  coinstats.cpp  coinstats.h  context.cpp  context.h  psbt.cpp  psbt.h  transaction.cpp  transaction.h  utxo_snapshot.h
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h  settings.cpp  settings.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  macos_appnap.h  macos_appnap.mm  main.cpp  modaloverlay.cpp  modaloverlay.h  networkstyle.cpp  networkstyle.h  notificator.cpp  notificator.h  openuridialog.cpp  (+78 more)
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.h  rawtransaction.cpp  rawtransaction_util.cpp  rawtransaction_util.h  register.h  request.cpp  request.h  server.cpp  server.h  util.cpp  util.h
src/script/: descriptor.cpp  descriptor.h  interpreter.cpp  interpreter.h  keyorigin.h  placehconsensus.cpp  placehconsensus.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  signingprovider.cpp  signingprovider.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  libsecp256k1.pc.in
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockchain_tests.cpp  blockencodings_tests.cpp  blockfilter_index_tests.cpp  blockfilter_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compilerbug_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  denialofservice_tests.cpp  descriptor_tests.cpp  flatfile_tests.cpp  fs_tests.cpp  getarg_tests.cpp  hash_tests.cpp  interfaces_tests.cpp  key_io_tests.cpp  key_properties.cpp  key_tests.cpp  limitedmap_tests.cpp  logging_tests.cpp  main.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  (+40 more)
src/univalue/: README.md
src/util/: asmap.cpp  asmap.h  bip32.cpp  bip32.h  bytevectorhash.cpp  bytevectorhash.h  check.h  error.cpp  error.h  fees.cpp  fees.h  golombrice.h  macros.h  memory.h  message.cpp  message.h  moneystr.cpp  moneystr.h  rbf.cpp  rbf.h  ref.h  settings.cpp  settings.h  spanparsing.cpp  spanparsing.h  strencodings.cpp  strencodings.h  string.cpp  string.h  system.cpp  system.h  threadnames.cpp  threadnames.h  time.cpp  time.h  translation.h  url.cpp  url.h  (+3 more)
(+769 files in other folders)
