dist_man1_MANS=

if BUILD_PLACEHD
  dist_man1_MANS+=placehd.1
endif

if ENABLE_QT
  dist_man1_MANS+=placeh-qt.1
endif

if BUILD_PLACEH_CLI
  dist_man1_MANS+=placeh-cli.1
endif

if BUILD_PLACEH_TX
  dist_man1_MANS+=placeh-tx.1
endif

if ENABLE_WALLET
if BUILD_PLACEH_WALLET
  dist_man1_MANS+=placeh-wallet.1
endif
endif
